# workout-framework

./: .env.template  .gitignore  LICENSE  README.md  azure-pipelines.yml  config.py  import_and_merge_from_local_files.py  pyproject.toml  requirements-dev.txt  requirements.txt  send.py  setup.py  start_api_and_streamlit.sh
scripts/: import_data_from_intensity_app_export.py  st_data_analysis.py
tests/: conftest.py
tests/e2e/: test_api.py  test_external_queue.py
tests/integration/: conftest.py  test_imports.py  test_imports_from_file.py  test_repository.py  test_uow.py  test_views.py
tests/test_data/: intensity_export.csv  rep_count_export.csv
tests/test_data/polar/: training-session-2019-06-18-3592273546-81d07b05-820a-4065-917c-55be787a3b93.json  training-session-2020-11-29-2500414183-7306b6af-8da6-4349-9fc0-5456d804b002.json  (+1 more)
tests/unit/: test_analytics.py  test_domain.py  test_handlers.py  test_imports.py  test_merging.py  test_services.py
wof/: bootstrap.py  config.py  service.py
wof/adapters/: csv.py  mongo_db.py  repository.py
wof/domain/: analytics.py  commands.py  events.py  model.py  types.py  views.py
wof/endpoints/: fast_api.py
wof/entrypoints/: external_event_consumer.py  fast_api_app.py  main.py
wof/frontend/: analysis_app.py  import_app.py  streamlit_app.py
wof/import_logic/: data_merging.py  intensity_app.py  polar.py
wof/import_workflows/: data_merging.py  intensity_app.py  polar.py  rep_count.py
wof/repository/: base.py  csv.py  intensity_app.py
wof/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
