[tool.poetry]
name = "workout-framework"
version = "0.1.0"
description = "Tools to help analys and plan workout data."
authors = ["Sten Remmelg <sten.remmelg@gmail.com>"]
license = "MIT"
packages = [
    { include = "wof" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
click = "^7.1.2"
requests = "^2.25.0"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-azurepipelines = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
